# helix-tenable-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  setup-mcp.sh
src/helix_tenable_mcp/: __init__.py  server.py
tests/: __init__.py  conftest.py  test_get_vulnerability_details.py  test_list_affected_assets.py  test_search_vulnerabilities_by_cve.py  test_search_vulnerabilities_by_severity.py
