[project]
name = "helix-tenable-mcp"
version = "0.1.0"
description = "MCP server for Tenable.io vulnerability management integration"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Helix Security Team", email = "security@helix.com" }
]
license = { text = "MIT" }
dependencies = [
    "mcp>=1.0.0",
    "pytenable>=1.5.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/helix_tenable_mcp"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[project.scripts]
helix-tenable-mcp = "helix_tenable_mcp.server:main"
